apps/hatchet/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hatchet-server
  namespace: hatchet
spec:
  selector:
    app: hatchet-server
  ports:
    - name: http
      port: 8888
      targetPort: 8888
