apps/hatchet/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hatchet-ingress
  namespace: hatchet
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: hatchet.amer.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: infra-traefik
  tls:
    - hosts:
        - hatchet.amer.dev
      secretName: hatchet-amer-dev-tls
  rules:
    - host: hatchet.amer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hatchet-server
                port:
                  number: 8888
